# Nial-dev

./: CONTRIBUTING.md  QNial7Win.komodoproject  README.md  wsmanage.c
BuildCore/: README.md
BuildCore/src/: CMakeLists.txt  windowsif.c
BuildNial/: .#todo.txt  README.md
BuildNial/pkgblder/: Cmakeheader  Cmakemiddle  addfeatures.ndf  auto.nlg  buildfromcore.ndf
BuildNial/pkgblder/all_features/NFILES/: nfiles.nh
BuildNial/pkgblder/all_features/NFILES/NFILES_src/: nfiles.c
BuildNial/pkgblder/all_features/NIAL_FFTW/: README.md  nial_fftw_cmake
BuildNial/pkgblder/all_features/NSFML_AUDIO/: nsfml_audio_cmake
BuildNial/pkgblder/all_features/SOCKETS/: sockets_cmake
BuildNial/pkgblder/all_features/SOCKETS/SOCKETS_src/: sockets.c
BuildNial/pkgblder/all_features/WINPROCESS/WINPROCESS_src/: winprocess.c
BuildNial/testing/v7testing/: auto.nlg
Experimental/: nplplot.c  nplplot_supp.c  plplot_test.ndf
binaries/Linux/: nial64
binaries/OSX/: nial
docs/: README.md
docs/Manuals/: V7 QNial Dictionary.html
examples/Neural Networks/: nn_feed_forward_net.ndf  nn_gd_test.ndf  nn_gd_training.ndf  nn_maths.ndf
examples/Simulated Annealing/: sa_queens.ndf
examples/Stuart/: Lsystem.ndf  README.txt  README2.md  Wolfram.ndf  apple-1.pbm  apple.pbm  apple_original.pbm  bat.pbm  camel.pbm  crosses.pbm  display.ndf  display2.ndf  fabric.pbm  fingerprint.pbm  fingerprint_problem.pbm  frog.pbm  gnuplot.ndf  gnuplot2.ndf  house.pgm  image.ndf  image_demos.ndf  irfanview.ndf  jetplane.pgm  keyless.ndf  lake.pgm  langlet.ndf  langlet_demos.ndf  lena_gray_256.pgm  objects.pbm  peppers.pbm  rat.pbm  steg_bgr.pbm  steg_msg.pbm  transforms.ndf
examples/Think Complexity/: graphs.ndf
examples/WebServer/: #test.log#  auto.nlg  html_bld.ndf  http_utils.ndf  net_server.ndf  web_server.ndf  ws_router.ndf  ws_test.ndf  ws_test_page.ndf
helpers/: a.out  acc_xor.c  acc_xor_gen.c  bitmasks  bitmasks.c  nial_prefix_masks.c  nialint_masks.c  safe_ints.c
modules/iup/: CMakeLists.txt  CMakeLists.txt.old  niup.c  niup.ndf
modules/opencl/: CMakeLists.txt  nopencl.c
modules/opengl/: CMakeLists.txt  nopengl.c  nopengl.ndf  nopengl_supp.c
niallib/: backtracker.ndf  count_all.ndf  filelist.ndf  finddefs.ndf  newhost.ndf  simpledb.ndf  solve.ndf  teach.ndf
src/: .absmach.h.swp  CMakeLists.txt  NialFeatures.txt  NialPackages.txt  absmach.c  arith.c  atops.c  basics.c  basics.h  bitops.c  blders.c  catch_throw.c  catch_throw.h  defs.ndf  defstbl.h  eval.c  fileio.c  insel.c  lib_main.c  logicops.c  main_stu.c  majs.txt  ncells.h  ndynload.c  nfiles.c  nialconsts.h  nialtypes.h  nstreams.h  ntable.c  parse.c  picture.c  pkgswchs.h  process.c  profile.c  scan.c  sockets.c  switches.h  trs.c  unixif.c  unixif.h  (+6 more)
src/pkgblder/: README.md  allprims.nh  basic.txt  coredefs.ndf  nial_linux  nial_osx  procpkg.ndf  simple.txt  v7Qnialpkg.txt  v7full.txt  v7win.txt
testing/v7testing/: autorand.ndf  testid.ndf
tutorial/: indices.lis  topics.lis
